<resources>
    <string name="app_name">SocialMediaGamer</string>
    <string name="mail">Mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logo">Logo</string>
    <string name="register_activity">Register Activity</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="user">User</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="complete_info">Complete your info profile</string>
    <string name="confirm">Confirm</string>
    <string name="wait">Wait a while</string>
    <string name="post_something">POST</string>
    <string name="name_game">Name game</string>
    <string name="description">Description</string>
    <string name="cost">Cost</string>
    <string name="category">Category</string>
    <string name="post">Post</string>
    <string name="publications">Publications</string>
    <string name="log_out">Log out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>