<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.PostActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:orientation="vertical"
        android:background="@color/orange">

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textAlignment="center"
          android:text="@string/post_something"
          android:textSize="18dp"
          android:layout_marginTop="23dp"
          android:textColor="@color/white"/>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_marginRight="20dp"
          android:layout_marginLeft="20dp"
          android:layout_marginTop="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="120dp"
            app:cardBackgroundColor="@color/white"
            android:layout_weight="1"
            android:layout_margin="5dp"
            app:cardCornerRadius="5dp">

          <ImageView
              android:id="@+id/imageViewPost1"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:src="@drawable/upload_image"
              android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="120dp"
            app:cardBackgroundColor="@color/white"
            android:layout_weight="1"
            android:layout_margin="5dp"
            app:cardCornerRadius="5dp">

          <ImageView
              android:id="@+id/imageViewPost2"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:src="@drawable/upload_image"
              android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>
      </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="15dp">

      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/ic_videogame_grey_50"
          android:layout_gravity="center"
          android:layout_marginLeft="5dp"
          android:layout_marginRight="5dp"
          android:layout_marginTop="3dp"/>

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputNameGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_game"
            android:inputType="text"
            android:minHeight="48dp"/>
      </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="15dp">

      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/ic_description_grey_50"
          android:layout_gravity="center"
          android:layout_marginLeft="5dp"
          android:layout_marginRight="5dp"
          android:layout_marginTop="3dp"/>

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:maxLines="4"
            android:maxLength="1000"/>
      </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textViewCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp">

      <LinearLayout
          android:layout_width="0dp"
          android:layout_height="100dp"
          android:layout_weight="1"
          android:orientation="vertical"
          android:layout_margin="3dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:cardBackgroundColor="@color/blue"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp"
            >

          <ImageView
              android:id="@+id/imageViewPC"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:src="@drawable/icon_pc"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="PC"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            />
      </LinearLayout>

      <LinearLayout
          android:layout_width="0dp"
          android:layout_height="100dp"
          android:layout_weight="1"
          android:orientation="vertical"
          android:layout_margin="3dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:cardBackgroundColor="@color/blue"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp">

          <ImageView
              android:id="@+id/imageViewPlay"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:src="@drawable/icon_ps4"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="PS4"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            />

      </LinearLayout>

      <LinearLayout
          android:layout_width="0dp"
          android:layout_height="100dp"
          android:layout_weight="1"
          android:orientation="vertical"
          android:layout_margin="3dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:cardBackgroundColor="@color/blue"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp">

          <ImageView
              android:id="@+id/imageViewXbox"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:src="@drawable/icon_xbox"
              android:padding="5dp"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Xbox"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            />

      </LinearLayout>

      <LinearLayout
          android:layout_width="0dp"
          android:layout_height="100dp"
          android:layout_weight="1"
          android:orientation="vertical"
          android:layout_margin="3dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:cardBackgroundColor="@color/blue"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp">

          <ImageView
              android:id="@+id/imageViewNintendo"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:src="@drawable/icon_nintendo"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Nintendo"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            />

      </LinearLayout>
    </LinearLayout>
  </LinearLayout>

  <Button
      android:id="@+id/btnPost"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/post"
      android:background="@drawable/rounded_button"
      android:layout_gravity="bottom"
      android:layout_margin="20dp"
      android:backgroundTint="@color/orange"
      android:textColor="@color/white"
      />
  </androidx.coordinatorlayout.widget.CoordinatorLayout>